--- a/appspec.yml
+++ b/appspec.yml
@@ -2,8 +2,8 @@ version: 0.0
 os: linux
 
 files:
-  - source: /index.html
-    destination: /var/www/html/
+  - source: / 
+    destination: /new_chatapp
 
 hooks:
   BeforeInstall:
